<resources>
    <string name="app_name">BuzzChat</string>
    <string name="need_a_new_account">Need a new account</string>
    <string name="welcome_to_buzzchat">Welcome to Buzz Chat</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>

<!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">Hi there, I\'m using Buzz Chat</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
    <string name="already_have_account">Already Have account</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="chat_fragment">Chats Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="requests_fragment">Requests Fragment</string>


</resources>
